// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

// XXX retaining package to avoid breaking existing configurations.
package foundation.runtime.kubernetes;

option go_package = "namespacelabs.dev/foundation/runtime/kubernetes/client";

message HostEnv {
    string kubeconfig = 1;
    string context    = 2;  // If empty, uses default context.
}

message SystemInfo {
    repeated string node_platform         = 1;
    string          detected_distribution = 2;  // k3d, eks, etc.
}